mascot/css/components/notification-center.css
/* A global navbar for each school. */
#students-first-notification-center {
	background-color: #FACE01;
	color: #ffffff;
	font-size: 15pt;
	margin: 0 auto;
	margin-top: -15px;
	padding: 2px;
	border-top-left-radius: 0;
	border-top-right-radius: 0;
	border-bottom-right-radius: 8px;
	border-bottom-left-radius: 8px;
	height: 10px;
	text-align:  center;
	width: 800px;
	font-size: 13px;
	transition: height 0.3s;
	z-index: 2;
}

/* Hovering over notification center opens it */
#students-first-notification-center:hover {
	height: 320px;
}

#students-first-notification-center #students-first-notification-wrapper {
	height: 0;
	overflow: hidden;
}

#students-first-notification-center:hover #students-first-notification-wrapper {
	height: 310;
	overflow: auto;
}

/* Headers have bottom borders */
#students-first-notification-center .students-first-notication-center-header {
	border-bottom: 1px solid #e9c001;
}

/* Style the messages */
#students-first-notification-center .students-first-notication-center-message {
	color: #9d8100;
	font-family: "Helvetica", sans-serif;
	width: 790px;
	padding: 5px;
	text-align: left;
	padding: 5px;
	min-height: 15px;
	opacity: 0.0;
	transition: opacity 0.4s;		
}

/* Fade the messages in */
#students-first-notification-center:hover .students-first-notication-center-message {
	opacity: 1.0;
}

/* The handle div. */
#students-first-notification-center-handle {
	display: block;
	margin: 2px auto;
	height: 5px;
	width: 50px;
	background-color: #e9c001;
	border-radius: 2px;
}

